Revert "Monter le z-index de la box (issue #1)"
This reverts commit ecdac566252e92d984a5c80ce8078485fd74aa32.

--- a/css/screlo.css
+++ b/css/screlo.css
@@ -12,7 +12,7 @@ span.paranumber:hover {background-color: yellow;}
 .warning-titreillusenlegende:before {font-weight: normal; font-family: sans-serif; font-size: 11px; display: inline; position: relative; content: "Titre plutôt que légende"; background-color: orange; color: white; padding: 3px; border-radius: 4px;}
 .warning-tree {border: 4px solid blue;}
 #class_inspector {background-color: #FFF; border: 2px solid #000; padding: 6px; margin-bottom: 6px; color: #000; min-height: 18px;}
-#relecture_box {position: fixed; width: 240px; bottom: 10px; right: 30px; background: #FFF; color: #C00; border: 1px solid #CCC; padding: 10px; z-index: 200; box-shadow: 0 0 5px #666;}
+#relecture_box {position: fixed; width: 240px; bottom: 10px; right: 30px; background: #FFF; color: #C00; border: 1px solid #CCC; padding: 10px;}
 #relecture_box li {border-radius: 4px; padding: 6px 12px; color: #FFF; background-color: #333; border: 1px solid transparent;}
 #relecture_box li.danger {background-color: #d2322d; border-color: #ac2925;}
 #relecture_box li.warning {background-color: #ed9c28; border-color: #d58512;}
